@@ -1,6 +1,7 @@
 from pkginfo.bdist import BDist
 from pkginfo.develop import Develop
 from pkginfo.distribution import Distribution
+from pkginfo.index import Index
 from pkginfo.installed import Installed
 from pkginfo.sdist import SDist
 from pkginfo.utils import get_metadata
